--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     },
     "author": "Lumine",
     "license": "MIT",
+    "private": false,
     "files": [
         "dist",
         "readme.md"
